메인페이지 작업중

--- a/user/index.html
+++ b/user/index.html
@@ -92,48 +92,57 @@
                 <li class="slide1 swiper-slide">
                     <div class="container">
                         <div class="row">
-                            <div class="banner_text col">
-                                <h3>HTML CSS Javascript 통합과정 프리패스 개강</h3>
-                                <h4>이젠 나도 웹퍼블리셔!</h4>
-                                <p>프리패스 신청 : 2023.03.24 - 2023.04.24</p>
+                            <div class="banner_text col-7 d-flex flex-column">
+                                <h3 class="order-2">
+                                    HTML CSS Javascript <br />
+                                    통합과정 프리패스 개강
+                                </h3>
+                                <h4 class="order-1">이젠 나도 웹퍼블리셔!</h4>
+                                <p class="content-text-1 order-3">프리패스 신청 : 2023.03.24 - 2023.04.24</p>
                             </div>
-                            <img class="col" src="img/banner1.png" alt="" />
+                            <img class="col-5" src="img/banner1.png" alt="" />
                         </div>
                     </div>
                 </li>
                 <li class="slide2 swiper-slide">
                     <div class="container">
                         <div class="row">
-                            <div class="banner_text col">
-                                <h3>이용자를 생각하는 UX/UI Design 심화과정</h3>
-                                <h4>예쁘기만한 디자인 시대는 끝!</h4>
-                                <p>프리패스 신청 : 2023.03.24 - 2023.04.24</p>
+                            <div class="banner_text col-7 d-flex flex-column">
+                                <h3 class="order-2">
+                                    이용자를 생각하는<br />
+                                    UX/UI Design 심화과정
+                                </h3>
+                                <h4 class="order-1">예쁘기만한 디자인 시대는 끝!</h4>
+                                <p class="content-text-1 order-3">프리패스 신청 : 2023.03.24 - 2023.04.24</p>
                             </div>
-                            <img class="col" src="img/banner2.png" alt="" />
+                            <img class="col-5" src="img/banner2.png" alt="" />
                         </div>
                     </div>
                 </li>
                 <li class="slide3 swiper-slide">
                     <div class="container">
                         <div class="row">
-                            <div class="banner_text col">
-                                <h3>오늘의 해결사는 누구?! 커뮤니티 코딩 대회</h3>
-                                <h4>함께 해서 더 즐겁고 더 창의적으로!</h4>
-                                <p>대회참가 신청 : 2023.03.24 - 2023.04.24</p>
+                            <div class="banner_text col-7 d-flex flex-column">
+                                <h3 class="order-2">오늘의 해결사는 누구?! <br />커뮤니티 코딩 대회</h3>
+                                <h4 class="order-1">함께 해서 더 즐겁고 더 창의적으로!</h4>
+                                <p class="content-text-1 order-3">대회참가 신청 : 2023.03.24 - 2023.04.24</p>
                             </div>
-                            <img class="col" src="img/banner3.png" alt="" />
+                            <img class="col-5" src="img/banner3.png" alt="" />
                         </div>
                     </div>
                 </li>
                 <li class="slide4 swiper-slide">
                     <div class="container">
                         <div class="row">
-                            <div class="banner_text col">
-                                <h3>웹퍼블리셔들을 위한 PHP&SQL 신규강좌 개강</h3>
-                                <h4>기능까지 갖춘 웹페이지 제작</h4>
-                                <p>강좌 신청 : 2023.03.24 - 2023.04.24</p>
+                            <div class="banner_text col-7 d-flex flex-column">
+                                <h3 class="order-2">
+                                    웹퍼블리셔들을 위한<br />
+                                    PHP&SQL 신규강좌 개강
+                                </h3>
+                                <h4 class="order-1">기능까지 갖춘 웹페이지 제작</h4>
+                                <p class="content-text-1 order-3">강좌 신청 : 2023.03.24 - 2023.04.24</p>
                             </div>
-                            <img class="col" src="img/banner4.png" alt="" />
+                            <img class="col-5" src="img/banner4.png" alt="" />
                         </div>
                     </div>
                 </li>
@@ -147,18 +156,18 @@
             <h2 class="hidden">카테고리별 강좌보기</h2>
             <h3>어떤 강의를 찾으세요?</h3>
             <ul class="d-flex justify-content-evenly">
-                <li><a href="" class="sprite">HTML</a></li>
-                <li><a href="" class="sprite">CSS</a></li>
-                <li><a href="" class="sprite">Javascript</a></li>
-                <li><a href="" class="sprite">React</a></li>
-                <li><a href="" class="sprite">PHP&SQL</a></li>
-                <li><a href="" class="sprite">Python</a></li>
-                <li><a href="" class="sprite">Mobile</a></li>
-                <li><a href="" class="sprite">Figma</a></li>
-                <li><a href="" class="sprite">AdobeXd</a></li>
-                <li><a href="" class="sprite">Scetch</a></li>
-                <li><a href="" class="sprite">Photoshop</a></li>
-                <li><a href="" class="sprite">illustrator</a></li>
+                <li><a href="" class="sprite html">HTML</a></li>
+                <li><a href="" class="sprite css">CSS</a></li>
+                <li><a href="" class="sprite javascript">Javascript</a></li>
+                <li><a href="" class="sprite react">React</a></li>
+                <li><a href="" class="sprite sql">PHP&SQL</a></li>
+                <li><a href="" class="sprite python">Python</a></li>
+                <li><a href="" class="sprite mobile">Mobile</a></li>
+                <li><a href="" class="sprite figma">Figma</a></li>
+                <li><a href="" class="sprite adobexd">AdobeXd</a></li>
+                <li><a href="" class="sprite sketch">Sketch</a></li>
+                <li><a href="" class="sprite photoshop">Photoshop</a></li>
+                <li><a href="" class="sprite illustrator">illustrator</a></li>
             </ul>
         </section>
 
@@ -348,28 +357,31 @@
                         <li><a href="#tabs-3">재밌게 배우는 코딩</a></li>
                     </ul>
                     <div id="tabs-1">
-                        <p>
-                            Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed
-                            magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.
-                        </p>
+                        <h3>빠르게 배우는 코딩</h3>
+                        <h4>fast learning</h4>
+                        <span>01</span>
+                        <p>빠르게 배우는 코딩에 대한 설명글</p>
+                        <p>빠르게 배우는 코딩에 대한 설명글</p>
+                        <p>빠르게 배우는 코딩에 대한 설명글</p>
+                        <span>자세히 보기</span>
                     </div>
                     <div id="tabs-2">
-                        <p>
-                            Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla
-                            sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat,
-                            tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.
-                        </p>
+                        <h3>쉽게 배우는 코딩</h3>
+                        <h4>easy learning</h4>
+                        <span>02</span>
+                        <p>쉽게 배우는 코딩에 대한 설명글</p>
+                        <p>쉽게 배우는 코딩에 대한 설명글</p>
+                        <p>쉽게 배우는 코딩에 대한 설명글</p>
+                        <span>자세히 보기</span>
                     </div>
                     <div id="tabs-3">
-                        <p>
-                            Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                            himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.
-                        </p>
-                        <p>
-                            Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros,
-                            id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce
-                            in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.
-                        </p>
+                        <h3>재밌게 배우는 코딩</h3>
+                        <h4>funny learning</h4>
+                        <span>03</span>
+                        <p>재밌게 배우는 코딩에 대한 설명글</p>
+                        <p>재밌게 배우는 코딩에 대한 설명글</p>
+                        <p>재밌게 배우는 코딩에 대한 설명글</p>
+                        <span>자세히 보기</span>
                     </div>
                 </div>
             </div>
@@ -454,7 +466,6 @@
         <script>
             var swiper = new Swiper(".mySwiper", {
                 slidesPerView: 1,
-                spaceBetween: 30,
                 loop: true,
                 pagination: {
                     el: ".swiper-pagination",
@@ -464,10 +475,10 @@
                     nextEl: ".banner-next",
                     prevEl: ".banner-prev",
                 },
-                autoplay: {
-                    delay: 4500,
-                    disableOnInteraction: false,
-                },
+                // autoplay: {
+                //     delay: 4500,
+                //     disableOnInteraction: false,
+                // },
             });
 
             var lecture_swiper = new Swiper(".lectureSwiper", {
@@ -477,6 +488,10 @@
                     nextEl: ".lecture-next",
                     prevEl: ".lecture-prev",
                 },
+                // autoplay: {
+                //     delay: 4500,
+                //     disableOnInteraction: false,
+                // },
             });
         </script>
     </body>
