--- a/user/cart/cart.html
+++ b/user/cart/cart.html
@@ -86,7 +86,7 @@ include $_SERVER["DOCUMENT_ROOT"]."/inc/head.php";
 
     $sql = "SELECT *, c.cnt
             from cart c
-            join products l on c.pid=l.pid where 1=1 ".$added_condition;
+            join lectures l on c.ledid=l.ledid where 1=1 ".$added_condition;
 
 
 $result = $mysqli->query($query) or die("query error => ".$mysqli->error);
@@ -103,17 +103,17 @@ while($rs = $result->fetch_object()){
             <!-- 장바구니에 담겨 있는 것 반복문으로 출력
             
             <?php
-            foreach($rsc as $p){
+            foreach($rsc as $l){
             ?>
             -->
             <li class="d-flex">
               <!-- 
-                <a href="/products.php?pid=<?php echo $p->pid;?>">
+                <a href="/products.php?ledid=<?php echo $l->ledid;?>">
                -->
-              <img src="<?php echo $p->thumbnail; ?>" alt="" />
+              <img src="<?php echo $l->thumbnail; ?>" alt="" />
               <div class="cart_list_contents">
-                <h3 class="content-text-1 lititle"><?php echo $p->name; ?></h3>
-                <span class="content-text-1"><?php echo number_format($p->price);?>원</span>
+                <h3 class="content-text-1 lititle"><?php echo $l->name; ?></h3>
+                <span class="content-text-1"><?php echo number_format($l->price);?>원</span>
                 <span class="content-text-1">무제한</span>
               </div>
               <button class="cart_item_del">삭제</button>
