--- a/admin/common.html
+++ b/admin/common.html
@@ -33,7 +33,7 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="hdDashboard">
               <a class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#menuDashboard"
-                aria-expanded="true" aria-controls="menuDashboard"  onclick="location.href='dashboard/index.php'">
+                aria-expanded="true" aria-controls="menuDashboard">
                 <i class="fa-solid fa-wrench"></i>
                 <span class="main-menu-ft">대시보드</span>
               </a>
@@ -53,48 +53,13 @@
             <div id="menuUser" class="accordion-collapse collapse" aria-labelledby="hdUser"
               data-bs-parent="#main-menu-wrap">
               <ul class="accordion-body">
-                <li>
-                  <a href="" class="sub-menu-ft">
-                    <span>&middot;</span>
-                    <span>회원관리</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="" class="sub-menu-ft">
-                    <span>&middot;</span>
-                    <span>강사관리</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="" class="sub-menu-ft">
-                    <span>&middot;</span>
-                    <span>관리자관리</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="" class="sub-menu-ft">
-                    <span>&middot;</span>
-                    <span>회원그룹관리</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="" class="sub-menu-ft">
-                    <span>&middot;</span>
-                    <span>회원휴면/탈퇴관리</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="" class="sub-menu-ft">
-                    <span>&middot;</span>
-                    <span>개인정보조회기록</span>
-                  </a>
-                </li>
-                <li>
-                  <a href="" class="sub-menu-ft">
-                    <span>&middot;</span>
-                    <span>메일발송관리</span>
-                  </a>
-                </li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>강사관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>관리자관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원그룹관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>회원휴면/탈퇴관리</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>개인정보조회기록</span></a></li>
+                <li><a href="" class="sub-menu-ft"><span>&middot;</span><span>메일발송관리</span></a></li>
               </ul>
             </div>
           </div>
@@ -110,13 +75,13 @@
               data-bs-parent="#main-menu-wrap">
               <ul class="accordion-body">
                 <li>
-                  <a href="category/category.php" class="sub-menu-ft">
+                  <a href="" class="sub-menu-ft">
                     <span>&middot;</span>
                     <span>과정카테고리</span>
                   </a>
                 </li>
                 <li>
-                  <a href="lecture/lecture_list.php" class="sub-menu-ft">
+                  <a href="" class="sub-menu-ft">
                     <span>&middot;</span>
                     <span>강좌리스트</span>
                   </a>
@@ -168,7 +133,7 @@
               data-bs-parent="#main-menu-wrap">
               <ul class="accordion-body">
                 <li>
-                  <a href="coupon/coupon_llist.php" class="sub-menu-ft">
+                  <a href="" class="sub-menu-ft">
                     <span>&middot;</span>
                     <span>쿠폰관리</span>
                   </a>
@@ -194,7 +159,7 @@
               data-bs-parent="#main-menu-wrap">
               <ul class="accordion-body">
                 <li>
-                  <a href="board/board_list.html" class="sub-menu-ft">
+                  <a href="" class="sub-menu-ft">
                     <span>&middot;</span>
                     <span>공지사항 게시판</span>
                   </a>
